Finland, Tarapaca and too many islands

--- a/GFM/localisation/000_persia_events.csv
+++ b/GFM/localisation/000_persia_events.csv
@@ -8,7 +8,7 @@ turkmenchay_treaty;Turkmenchay Treaty;;;;;;;;;;;;;
 amir_kabir_attending;Appointed Amir Kabir;;;;;;;;;;;;;
 naser_in_europe;The Shah's Tour of Europe;;;;;;;;;;;;;
 avadhi;Hindustani;;;;;;;;;;;;;
-PROV2336;Rapa Nui;;;;;;;;;;;;;
+PROV2336;Te Pito o te Henua;;;;;;;;;;;;;
 PROV2309;Cobija;Cobija;Cobija;;Cobija;;;;;;;;;
 PROV2330;Concepción;Concepción;Concepción;;Concepción;;;;;;;;;
 the_treaty_of_paris_persia_title;The Treaty of Paris;;;;;;;;;;;;;
