--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -415,7 +415,7 @@ PROV2513;Otepoti;;;;;;;;;;;;;
 PROV2515;Otautahi;;;;;;;;;;;;;
 PROV2516;Whakatu;;;;;;;;;;;;;
 PROV2519;Maymana;;;;;;;;;;;;;
-PROV2526;Phoenix and Line Islands;;;;;;;;;;;;;
+PROV2526;Teraina-Rawaki;;;;;;;;;;;;;
 PROV2537;Birara;;;;;;;;;;;;;
 PROV2548;Igdyr;;;;;;;;;;;;;
 PROV2554;Concepción;;;;;;;;;;;;;
@@ -973,7 +973,7 @@ PROV3901;Shayilanga;;;;;;;;;;;;;
 PROV3902;Enyokeni;;;;;;;;;;;;;
 PROV3903;Lusikisiki;;;;;;;;;;;;;
 PROV3904;Worms;;;;;;;;;;;;;
-PROV3905;Leeward Islands;;;;;;;;;;;;;
+PROV3905;Pora Pora;;;;;;;;;;;;;
 PROV3906;Rudolstadt;;;;;;;;;;;;;
 PROV3907;Bakhmut;;;;;;;;;;;;;
 PROV3908;Priluki;;;;;;;;;;;;;
