--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9107,7 +9107,7 @@ PROV604;Basel;Bâle;Basel;;Basilea;;;;;;;;;
 PROV605;Bern;Berne;Bern;;Berna;;;;;;;;;
 PROV607;Genève;Genève;Genève;;Genève;;;;;;;;;
 PROV608;Neuchâtel;Neuchâtel;Neuchatel;;Neuchatel;;;;;;;;;
-PROV610;Ponape;Ponape;Ponape;;Ponape;;;;;;;;;
+PROV610;Pohnpei;Pohnpei;Pohnpei;;Pohnpei;;;;;;;;;
 PROV611;Chur;Coire;Chur;;Chur;;;;;;;;;
 PROV612;Innsbruck;Innsbruck;Innsbruck;;Innsbruck;;;;;;;;;
 PROV613;Salzburg;Salzbourg;Salzburg;;Salzburgo;;;;;;;;;
@@ -10453,7 +10453,7 @@ PROV2303;Puno;Puno;Puno;;Puno;;;;;;;;;
 PROV2304;Arequipa;Arequipa;Arequipa;;Arequipa;;;;;;;;;
 PROV2305;Paposo;Paposo;Paposo;;Paposo;;;;;;;;;
 PROV2306;Sorocaba;Sorocaba;Sorocaba;;Sorocaba;;;;;;;;;
-PROV2307;San Lorenzo;San Lorenzo;San Lorenzo;;San Lorenzo;;;;;;;;;
+PROV2307;Tarapacá;Tarapacá;Tarapacá;;Tarapacá;;;;;;;;;
 PROV2308;Arica;Arica;Arica;;Arica;;;;;;;;;
 PROV2309;Mejillones;Mejillones;Mejillones;;Mejillones;;;;;;;;;
 PROV2310;La Paz;La Paz;La Paz;;La Paz;;;;;;;;;
@@ -10481,7 +10481,7 @@ PROV2332;Osorno;Osorno;Osorno;;Osorno;;;;;;;;;
 PROV2333;Achén;Puerto Aisen;Puerto Aisen;;Puerto Aisen;;;;;;;;;
 PROV2334;Toljkoskn;Toljkoskn;Toljkoskn;;Toljkoskn;;;;;;;;;
 PROV2335;Ayu-kenke'n;Ayu-kenke'n;Ayu-kenke'n;;Ayu-kenke'n;;;;;;;;;
-PROV2336;Rapa Nui;Rapa Nui;Rapa Nui;;Rapa Nui;;;;;;;;;
+PROV2336;Te Pito o te Henua;Te Pito o te Henua;Te Pito o te Henua;;Te Pito o te Henua;;;;;;;;;
 PROV2337;Yexwase' Yamelkyet;Yexwase' Yamelkyet;Yexwase' Yamelkyet;;Yexwase' Yamelkyet;;;;;;;;;
 PROV2338;Puerto Guaraní;Puerto Guarani;Puerto Guarani;;Puerto Guaraní;;;;;;;;;
 PROV2339;Asuncion;Asunción;Asuncion;;Asunción;;;;;;;;;
@@ -10587,7 +10587,7 @@ PROV2450;São Paulo;São Paulo;Sao Paulo;;Sao Paulo;;;;;;;;;
 PROV2451;Santos;Santos;Santos;;Santos;;;;;;;;;
 PROV2452;Campinas;Campinas;Campinas;;Campinas;;;;;;;;;
 PROV2453;Assis;Assis;Assis;;Assis;;;;;;;;;
-PROV2454;Fiji;Fidji;Fidschi;;Islas Fiji;;;;;;;;;
+PROV2454;Viti;Viti;Viti;;Viti;;;;;;;;;
 PROV2455;Iguape;Iguape;Iguape;;Iguape;;;;;;;;;
 PROV2456;Nyacfateitei;Nyacfateitei;Nyacfateitei;;Nyacfateitei;;;;;;;;;
 PROV2457;Curitiba;Curitiba;Curitiba;;Curitiba;;;;;;;;;
@@ -10642,11 +10642,11 @@ PROV2517;Guam;Guam;Guam;;Guam;;;;;;;;;
 PROV2518;Palau;Palau;Palau;;Palau;;;;;;;;;
 PROV2520;Taveuni;Taveuni;Taveuni;;Taveuni;;;;;;;;;
 PROV2521;Saipan;Saipan;Saipan;;Saipan;;;;;;;;;
-PROV2522;Marshall Islands;Îles Marshall;Marshallinseln;;Islas Marshall;;;;;;;;;
-PROV2523;Nauru;Nauru;Nauru;;Nauru;;;;;;;;;
-PROV2524;Wake;Wake;Wake;;Atolón de Wake;;;;;;;;;
+PROV2522;Aeloñ Kein Ad;Aeloñ Kein Ad;Aeloñ Kein Ad;;Aeloñ Kein Ad;;;;;;;;;
+PROV2523;Naoero;Naoero;Naoero;;Naoero;;;;;;;;;
+PROV2524;Anen Kio;Anen Kio;Anen Kio;;Anen Kio;;;;;;;;;
 PROV2525;Marcus;Marcus;Marcus;;Marcus;;;;;;;;;
-PROV2527;Gilbert Islands;Îles Gilbert;Gilbertinseln;;Islas Gilbert;;;;;;;;;
+PROV2527;Tungaru;Tungaru;Tungaru;;Tungaru;;;;;;;;;
 PROV2528;Port Moresby;Port Moresby;Port Moresby;;Port Moresby;;;;;;;;;
 PROV2529;Kerema;Kerema;Kerema;;Kerema;;;;;;;;;
 PROV2530;Lae;Lae;Lae;;Lae;;;;;;;;;
@@ -10657,18 +10657,18 @@ PROV2535;New Hebrides;New Hebrides;Neue Hebriden;;Nuevas Hébridas;;;;;;;;;
 PROV2536;Santa Cruz Islands;Îles Santa Cruz ;Santa Cruz-Inseln;;Islas de Santa Cruz;;;;;;;;;
 PROV2539;Bougainville;Bougainville;Bougainville;;Bougainville;;;;;;;;;
 PROV2540;Tonga;Tonga;Tonga;;Tonga;;;;;;;;;
-PROV2541;Ellice Islands;Îles Ellice;Ellice-Inseln;;Islas Ellice;;;;;;;;;
-PROV2542;Wallis and Futuna;Wallis-et-Futuna;Wallis und Futuna;;Wallis y Futuna;;;;;;;;;
+PROV2541;Tuvalu;Tuvalu;Tuvalu;;Tuvalu;;;;;;;;;
+PROV2542;'Uvea;'Uvea;'Uvea;;'Uvea;;;;;;;;;
 PROV2543;Apia;Apia;Apia;;Apia;;;;;;;;;
 PROV2544;Pago Pago;Pago Pago;Pago Pago;;Pago Pago;;;;;;;;;
 PROV2545;Rarotonga;Rarotonga;Rarotonga;;Rarotonga;;;;;;;;;
-PROV2546;Tongareva;Tongareva;Tongareva;;Tongareva;;;;;;;;;
+PROV2546;Rakahanga;Rakahanga;Rakahanga;;Rakahanga;;;;;;;;;
 PROV2547;Tokelau;Tokelau;Tokelau;;Tokelau;;;;;;;;;
 PROV2549;Kaxinawá;Kaxinawá;Kaxinawá;;Kaxinawá;;;;;;;;;
 PROV2550;Forte do Príncipe;Forte do Principe;Forte do Principe;;Forte do Príncipe;;;;;;;;;
-PROV2551;Marquesas;Marquises;Marquesas;;Marquesas;;;;;;;;;
+PROV2551;Te Fenua'enata;Te Fenua'enata;Te Fenua'enata;;Te Fenua'enata;;;;;;;;;
 PROV2552;Pitcairn;Pitcairn;Pitcairn;;Pitcairn;;;;;;;;;
-PROV2553;Tuamotus;Tuamotus;Tuamotus;;Tuamotus;;;;;;;;;
+PROV2553;Pa'umotu;Pa'umotu;Pa'umotu;;Pa'umotu;;;;;;;;;
 PROV2555;Athens;Athens;Athens;;Athens;;;;;;;;;
 PROV2556;Asheville;Asheville;Asheville;;Asheville;;;;;;;;;
 PROV2559;Suhaj;Suhaj;Suhaj;;Suhaj;;;;;;;;;
@@ -10688,7 +10688,7 @@ PROV2574;Mochudi;Mochudi;Mochudi;;Mochudi;;;;;;;;;
 PROV2575;Ipoh;Ipoh;Ipoh;;Ipoh;;;;;;;;;
 PROV2576;Natuna;Natuna;Natuna;;Natuna;;;;;;;;;
 PROV2578;Tacna;Tacna;Tacna;;Tacna;;;;;;;;;
-PROV2579;Truk;Truk;Truk;;Truk;;;;;;;;;
+PROV2579;Chuuk;Chuuk;Chuuk;;Chuuk;;;;;;;;;
 PROV2583;Cetinje;Cetinje;Cetinje;;Cetinje;;;;;;;;;
 PROV2587;Kóla;Kóla;Kóla;;Kóla;;;;;;;;;
 PROV2588;Onega;Onega;Onega;;Onega;;;;;;;;;
@@ -10709,7 +10709,7 @@ PROV2616;Tilichiki;Tilichiki;Tilichiki;;Tilichiki;;;;;;;;;
 PROV2617;Saghalian Oula;Saghalian Oula;Saghalian Oula;;Saghalian Oula;;;;;;;;;
 PROV2618;Talaya;Talaya;Talaya;;Talaya;;;;;;;;;
 PROV2621;Srednekolymsk;Srednekolymsk;Srednekolymsk;;Srednekolymsk;;;;;;;;;
-PROV2623;Midway Island;Île Midway;Midway;;Isla de Midway;;;;;;;;;
+PROV2623;Kuaihelani;Kuaihelani;Kuaihelani;;Kuaihelani;;;;;;;;;
 PROV2624;Lwaagu;Loango;Loango;;Loango;;;;;;;;;
 PROV2633;Ossora;Ossora;Ossora;;Ossora;;;;;;;;;
 PROV2635;Kariba;Kariba;Kariba;;Kariba;;;;;;;;;
