Some loc changes

--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -4,11 +4,11 @@ PER_prussian_constitutionalism;Sublime State of Iran;;;;;;;;;;;;;
 PER_prussian_constitutionalism_ADJ;Persian;;;;;;;;;;;;;
 PER_hms_government;Sublime State of Iran;;;;;;;;;;;;;
 PER_hms_government_ADJ;Iranian;;;;;;;;;;;;;
-PER_absolute_empire;Qajar Empire;;;;;;;;;;;;;
+PER_absolute_empire;The Qajar Empire;;;;;;;;;;;;;
 PER_absolute_empire_ADJ;Qajar;;;;;;;;;;;;;
-PER_semi_constitutional_empire;Sublime State of Iran;;;;;;;;;;;;;
+PER_semi_constitutional_empire;The Sublime State of Iran;;;;;;;;;;;;;
 PER_semi_constitutional_empire_ADJ;Persian;;;;;;;;;;;;;
-PER_constitutional_empire;Sublime State of Iran;;;;;;;;;;;;;
+PER_constitutional_empire;The Sublime State of Iran;;;;;;;;;;;;;
 PER_constitutional_empire_ADJ;Iranian;;;;;;;;;;;;;
 PER_democracy;Iran;;;;;;;;;;;;;
 PER_presidential_dictatorship;Iran;;;;;;;;;;;;;
@@ -17,11 +17,11 @@ PER_proletarian_dictatorship_ADJ;Iranian;;;;;;;;;;;;;
 PER_fascist_dictatorship;Iran;;;;;;;;;;;;;
 PER_radical_republic;Iranian Republic;;;;;;;;;;;;;
 PER_ADJ;Iranian;;;;;;;;;;;;;
-AFG_absolute_empire;Durrani Empire;;;;;;;;;;;;;
+AFG_absolute_empire;The Durrani Empire;;;;;;;;;;;;;
 AFG_absolute_empire_ADJ;Durrani;;;;;;;;;;;;;
-AFG_semi_constitutional_empire;Durrani Empire;;;;;;;;;;;;;
+AFG_semi_constitutional_empire;The Durrani Empire;;;;;;;;;;;;;
 AFG_semi_constitutional_empire_ADJ;Durrani;;;;;;;;;;;;;
-AFG_constitutional_empire;Durrani Empire;;;;;;;;;;;;;
+AFG_constitutional_empire;The Durrani Empire;;;;;;;;;;;;;
 AFG_constitutional_empire_ADJ;Durrani;;;;;;;;;;;;;
 KND;Kandahar;;;;;;;;;;;;;
 KND_ADJ;Kandahari;;;;;;;;;;;;;
@@ -49,7 +49,7 @@ DRV;Darvaz;;;;;;;;;;;;;
 DRV_ADJ;Darvazi;;;;;;;;;;;;;
 QSM;Qasimi Federation;;;;;;;;;;;;;
 QSM_ADJ;Qasimi;;;;;;;;;;;;;
-KAL;Khanate of Kalat;;;;;;;;;;;;;
+KAL;The Khanate of Kalat;;;;;;;;;;;;;
 KAL_ADJ;Kalati;;;;;;;;;;;;;
 DUB;Emirate of Dubai;;;;;;;;;;;;;
 DUB_ADJ;Dubai;;;;;;;;;;;;;
