--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -905,9 +905,9 @@ CHY_socialist;Socialist Party;;;;;;;;;;;;;
 CHY_communist;Communist Part;;;;;;;;;;;;;
 CHY_fascist;Fascist Party;;;;;;;;;;;;;
 DAG;Dagestan;;;;;;;;;;;;;
-DAG_democracy;Mountainous Republic;;;;;;;;;;;;;
+DAG_democracy;The Mountainous Republic;;;;;;;;;;;;;
 DAG_ADJ;Dagestani;;;;;;;;;;;;;
-DAG_theocracy;Caucasus Imamate;;;;;;;;;;;;;
+DAG_theocracy;The Caucasus Imamate;;;;;;;;;;;;;
 DAG_presidential_dictatorship;Dagestan;;;;;;;;;;;;;
 DAG_proletarian_dictatorship;Dagestan;;;;;;;;;;;;;
 DAG_parliamentary_republic;Dagestan;;;;;;;;;;;;;
@@ -1308,10 +1308,10 @@ KAM_radical;The Libertains;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 KAM_socialist;The Socialists;Faction socialiste;Die sozialistische Fraktion;;;;;;;;;;;
 KAM_communist;The Communists;Faction communiste;Die kommunistische Fraktion;;;;;;;;;;;
 KAM_fascist;The Nationalists;Faction fasciste;Die faschistische Fraktion;;;;;;;;;;;
-KHI_absolute_monarchy;Khanate of Khiva;;;;;;;;;;;;;
-KKP_absolute_monarchy;Karakalpak Khanate;;;;;;;;;;;;;
-BUK_absolute_monarchy;Emirate of Bukhara;;;;;;;;;;;;;
-KOK_absolute_monarchy;Khanate of Kokand;;;;;;;;;;;;;
+KHI_absolute_monarchy;The Khanate of Khiva;;;;;;;;;;;;;
+KKP_absolute_monarchy;The Karakalpak Khanate;;;;;;;;;;;;;
+BUK_absolute_monarchy;The Emirate of Bukhara;;;;;;;;;;;;;
+KOK_absolute_monarchy;The Khanate of Kokand;;;;;;;;;;;;;
 KAZ;Kazakhstan;;;;;;;;;;;;;
 KAZ_ADJ;Kazakh;;;;;;;;;;;;;
 KAZ_absolute_monarchy_ADJ;Middle Kazakh;;;;;;;;;;;;;
@@ -4055,9 +4055,9 @@ BUG_constitutional_empire;Chwezi Empire;;;;;;;;;;;;;
 BUG_constitutional_empire_ADJ;Chwezi;;;;;;;;;;;;;
 BUG_semi_constitutional_empire;Chwezi Empire;;;;;;;;;;;;;
 BUG_semi_constitutional_empire_ADJ;Chwezi;;;;;;;;;;;;;
-KYR_absolute_monarchy;Kara-Kyrgyz Khanate;;;;;;;;;;;;;
-KYR_prussian_constitutionalism;Kara-Kyrgyz Khanate;;;;;;;;;;;;;
-KYR_hms_government;Kara-Kyrgyz Khanate;;;;;;;;;;;;;
+KYR_absolute_monarchy;The Kara-Kyrgyz Khanate;;;;;;;;;;;;;
+KYR_prussian_constitutionalism;The Kara-Kyrgyz Khanate;;;;;;;;;;;;;
+KYR_hms_government;The Kara-Kyrgyz Khanate;;;;;;;;;;;;;
 KYR_prov_gov_conservative;The Azhybek Batyr Revolt;;;;;;;;;;;;;
 KYR_absolute_monarchy_ADJ;Kara-Kyrgyz;;;;;;;;;;;;;
 KYR_prussian_constitutionalism_ADJ;Kara-Kyrgyz;;;;;;;;;;;;;
@@ -4069,7 +4069,7 @@ KYR_absolute_empire_ADJ;Sarybagysh;;;;;;;;;;;;;
 KYR_semi_constitutional_empire_ADJ;Sarybagysh;;;;;;;;;;;;;
 KYR_constitutional_empire_ADJ;Sarybagysh;;;;;;;;;;;;;
 KYR_prov_gov_conservative_ADJ;Azhybek;;;;;;;;;;;;;
-IMO_theocracy;Imamate of Oman;;;;;;;;;;;;;
+IMO_theocracy;The Imamate of Oman;;;;;;;;;;;;;
 IMO_theocracy_ADJ;Omani;;;;;;;;;;;;;
 IMO;Hajar;;;;;;;;;;;;;
 IMO_ADJ;Omani;;;;;;;;;;;;;
@@ -4338,7 +4338,7 @@ CRW_ADJ;Apsáalooke;;;;;;;;;;;;;
 PAW;Pawnee;;;;;;;;;;;;;
 PAW_ADJ;Chatiks;;;;;;;;;;;;;
 KSJ;East Kazakhstan;;;;;;;;;;;;;
-KSJ_absolute_monarchy;Senior Jüz;;;;;;;;;;;;;
+KSJ_absolute_monarchy;The Senior Jüz;;;;;;;;;;;;;
 KSJ_ADJ;Senior Kazakh;;;;;;;;;;;;;
 KAZ_proletarian_dictatorship;SSR Kazakhstan;RSS Kazakhstan;SSR Kasachstan;SSR Kazachstan;SSR Kazajstán;RSS Kazaca;SSR Kazahsztán;SSR Kazachstán;SSR Kazahsztán;SSR Kazachstan;SSR Cazaquistão;ÑÑÐ Êàçàõñòàí;SSR Kazakstan;
 KAZ_radical_republic;The Semireyche Republic;;;;;;;;;;;;;
