--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -75,8 +75,8 @@ MCK_colonial_company_4;Zheltorossiya;;;;;;;;;;;;;
 XIN_colonial_company_ADJ;Qing;;;;;;;;;;;;;
 TST_colonial_company;Südtirol;;;;;;;;;;;;;
 LOM_colonial_company;Lombardo-Venetien;;;;;;;;;;;;;
-HDJ_colonial_company;Sharifate of Mecca;;;;;;;;;;;;;
-HDJ_colonial_company_2;Sharifate of Mecca;;;;;;;;;;;;;
+HDJ_colonial_company;The Sharifate of Mecca;;;;;;;;;;;;;
+HDJ_colonial_company_2;The Sharifate of Mecca;;;;;;;;;;;;;
 BAN_colonial_company;Freistaat Banat;;;;;;;;;;;;;
 SIE_colonial_company;Siebenburgen;;;;;;;;;;;;;
 SIE_colonial_company_ADJ;Siebenbürger;;;;;;;;;;;;;
