--- a/GFM/localisation/00000_1830 loc.csv
+++ b/GFM/localisation/00000_1830 loc.csv
@@ -178,7 +178,7 @@ OHWELLDUTCHNVASIONLESGOO;\n\nThe Dutch would rather flee than face us on the bat
 SAM_prov_gov_liberal;Military-Political System of Samos;;;;;;;;;;;;;
 samoa_imean_samos_title;Impose Tributary Status on Samos;;;;;;;;;;;;;
 samoa_imean_samos_desc;Samos, an archipelago of culturally Greek islands just off the Turkish side of Ionia, did not join Greece after the 1821 revolt, despite having fought against our invasions of the islands. Instead, Samian rebel leader Lykourgos Logothetis declared Samos an independent state that nonetheless would not accept Ottoman suzerainty. Well, words are meaningless if they cannot be backed up on the battlefield.;;;;;;;;;;;;;
-GRE_prov_gov_liberal;Hellenic State;;;;;;;;;;;;;
+GRE_prov_gov_liberal;The Hellenic State;;;;;;;;;;;;;
 the_cauca_war_title;The Cauca War;;;;;;;;;;;;;
 the_cauca_war_desc;The newly-independent state of Ecuador under conservative president Gabriel García Moreno has become socially unstable. This combined with unsettled border disputes can provide a pretext for military action in the country, in hopes of gaining valuable territories for reuniting the old borders of Gran Colombia.;;;;;;;;;;;;;
 pasto_treaty_title;The Treaty of Pasto;;;;;;;;;;;;;
