--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -4058,7 +4058,7 @@ BUG_semi_constitutional_empire_ADJ;Chwezi;;;;;;;;;;;;;
 KYR_absolute_monarchy;The Kara-Kyrgyz Khanate;;;;;;;;;;;;;
 KYR_prussian_constitutionalism;The Kara-Kyrgyz Khanate;;;;;;;;;;;;;
 KYR_hms_government;The Kara-Kyrgyz Khanate;;;;;;;;;;;;;
-KYR_prov_gov_conservative;The Azhybek Batyr Revolt;;;;;;;;;;;;;
+KYR_prov_gov_conservative;The Arkalik Confederation;;;;;;;;;;;;;
 KYR_absolute_monarchy_ADJ;Kara-Kyrgyz;;;;;;;;;;;;;
 KYR_prussian_constitutionalism_ADJ;Kara-Kyrgyz;;;;;;;;;;;;;
 KYR_hms_government_ADJ;Kara-Kyrgyz;;;;;;;;;;;;;
@@ -4068,7 +4068,7 @@ KYR_constitutional_empire;The Sarybagysh Empire;;;;;;;;;;;;;
 KYR_absolute_empire_ADJ;Sarybagysh;;;;;;;;;;;;;
 KYR_semi_constitutional_empire_ADJ;Sarybagysh;;;;;;;;;;;;;
 KYR_constitutional_empire_ADJ;Sarybagysh;;;;;;;;;;;;;
-KYR_prov_gov_conservative_ADJ;Azhybek;;;;;;;;;;;;;
+KYR_prov_gov_conservative_ADJ;Kyrgyz;;;;;;;;;;;;;
 IMO_theocracy;The Imamate of Oman;;;;;;;;;;;;;
 IMO_theocracy_ADJ;Omani;;;;;;;;;;;;;
 IMO;Hajar;;;;;;;;;;;;;
