--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -449,3 +449,6 @@ ryukyu_end;and its surrounding islands;;;;;;;;;;;;;
 ryukyu_dynamic_test;gains cores on;;;;;;;;;;;;;
 native_option_text;Review possible treaty options...;;;;;;;;;;;;;
 chilean;Chilean;;;;;;;;;;;;;
+tawantinsuyu_reborn_title;Tawantinsuyu Reborn;;;;;;;;;;;;;
+tawantinsuyu_reborn_desc;Text will be added soon, sorry!;;;;;;;;;;;;;
+tawantinsuyu_empire;Tawantinsuyu Reborn;;;;;;;;;;;;;
