a lot of fixes, GCO has OP money generators again

--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -662,9 +662,9 @@ UBD_hms_government;The United Baltic Duchy;;;;;;;;;;;;;
 UBD_prov_gov_conservative;The Baltic Provinces;;;;;;;;;;;;;
 UBD_strenghten_governorship_title;Strengthen Our Governorship;;;;;;;;;;;;;
 UBD_strenghten_governorship_desc;Despite technically being separate, the three Baltic governorates - Livonia, Estland and Courland have shared the same governor since 1800. If we were able to project enough power in our governorates, we might be able to de facto control all of them, despite the reality on paper being different. But who knows? Perhaps the Tsar would be partial to allow this fait accompli...;;;;;;;;;;;;;
-EVTNAME31500002;\n\nBaltic Governor strengthens Power;;;;;;;;;;;;;
+EVTNAME31500002;Baltic Governor strengthens Power;;;;;;;;;;;;;
 EVTDESC31500002;\n\nDespite technically being separate, the three Baltic governorates - Livonia, Estland and Courland have shared the same governor since 1800. The current governor has managed to assert his authority enough that any divisions remain but on paper. Do we allow the governorates to be merged into one entity, or do we replace the governor with a less ambitious man?;;;;;;;;;;;;;
-EVTNAME31500003;\n\nThe Baltic German Plea For Help;;;;;;;;;;;;;
+EVTNAME31500003;The Baltic German Plea For Help;;;;;;;;;;;;;
 EVTDESC31500003;\n\nAn envoy has arrived from Riga under mundane pretext - in reality bearing a serious message. It would seem that the Russians seek to end the Ostsee Rights, close the German Landtags and directly incorporate the Baltic Governorates, perhaps even to subject them to Russification. The envoy asks for help - for the Germans to protect their own shall Russia try to deprive them of their rights. A secret treaty can be drafted... What is our response?;;;;;;;;;;;;;
 UBD_secret_treaty_title;Secret Treaty with the Germans;;;;;;;;;;;;;
 UBD_secret_treaty_desc;It is becoming more and more probable that the Tsar will decide to abolish our governorate and administrate us directly. In such an event, we would be nigh powerless to resist the Russian onslaught. Our only hope would be to sign a secret treaty with our German brothers in Berlin - that they would come defend us from Russian aggression. We cannot let ourselves become lost!;;;;;;;;;;;;;
