--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -1814,3 +1814,7 @@ BOOMHAVESOMEWOOL;\n\nSince making a region a colony will rid it of all modifiers
 EVTDESC8365925;\n\nDue to a change in our geopolitical situation, we have come to accept the Min-speaking peoples as equal members of our society.;;;;;;;;;;;;;
 EVTDESC4207101;\n\nAfter defeating the USA, the Louisiana Territory is under our control now, what should we do with it?;;;;;;;;;;;;;
 THANKSFORMCTOYOU;\n\nThanks for playing MC!;;;;;;;;;;;;;
+BERELJNAEPTS;\n\nThey have agreed to protect us in the future.;;;;;;;;;;;;;
+BERELJNONAEPTS;\n\nThey have refused to protect us in the future.;;;;;;;;;;;;;
+INTEGRATEBAALTIC;\n\nThe Baltic provinces have submitted to our integration.;;;;;;;;;;;;;
+WHATHAVEYOUDONEWHATHOW;\n\nThey must have reneged on our treaty...;;;;;;;;;;;;;
