Resolving the Land Crisis now a decision

--- a/GFM/localisation/00000_1830 loc.csv
+++ b/GFM/localisation/00000_1830 loc.csv
@@ -642,8 +642,10 @@ EVTDESC00064;With the liberals soundly defeated in France, the Bourbon realm has
 EVTOPTA00064;Le libéralisme est mort! §RGain 5 infamy§W;;;;;;;;;;;;;
 EVTOPTB00064;Restauration par la modération.;;;;;;;;;;;;;
 EVTOPTC00064;La liberté par la restauration!;;;;;;;;;;;;;
+land_crisis_fixed_title;End the Land Crisis;;;;;;;;;;;;;
+land_crisis_fixed_desc;The land crisis that began in the 1830s has become an increasingly large pain in the side of the Bourbon administration, torn between the pull of popular opinion and modernization, and the opinions of the aristocracy that make up the backbone of the monarchy's support. With the continuing introduction of more efficient technologies into the French economy, the government finally has an opportunity to bring a definitive end to the agricultural crisis.;;;;;;;;;;;;;
 EVTNAME00065;Resolving the Land Crisis;;;;;;;;;;;;;
-EVTDESC00065;The land crisis that began in the 1830s has become an increasingly large pain in the side of the Bourbon administration, torn between the pull of popular opinion and modernization, and the opinions of the aristocracy that make up the backbone of the monarchy's support. With the continuing introduction of more efficient technologies into the French economy, the government finally has an opportunity to bring a definitive end to the agricultural crisis, but the question remains as to whom the remaining outstanding claims will revert to.;;;;;;;;;;;;;
+EVTDESC00065;The question remains as to whom the remaining outstanding claims will revert to.;;;;;;;;;;;;;
 EVTOPTA00065;The land rightfully belongs to the aristocracy.;;;;;;;;;;;;;
 EVTOPTB00065;Maybe the Carlists were onto something...;;;;;;;;;;;;;
 EVTOPTC00065;We shall simply forbid the reclamation efforts.;;;;;;;;;;;;;
