--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1199,6 +1199,8 @@ PROV4184;Sherenté;;;;;;;;;;;;;
 PROV4185;Acroamirim;;;;;;;;;;;;;
 PROV4186;Matupiri;;;;;;;;;;;;;
 PROV4187;Popukare;;;;;;;;;;;;;
+PROV4188;Béxakebuángana;;;;;;;;;;;;;
+PROV4189;Konsaya;;;;;;;;;;;;;
 PRG_2338;Chaco Boreal;;;;;;;;;;;;;
 ARG_2377;Chaco Austral;;;;;;;;;;;;;
 ARG_2366;Chaco Central;;;;;;;;;;;;;
