--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -388,7 +388,7 @@ HAW_colonial_company_3;Kolonie Hawaii;;;;;;;;;;;;;
 HAW_colonial_company_4;Hawai-To;;;;;;;;;;;;;
 RIG_colonial_company_2;Guyane;;;;;;;;;;;;;
 PTG_colonial_company;Dominion of New Wales;;;;;;;;;;;;;
-PTG_colonial_company_2;Dominion de Patagonie;;;;;;;;;;;;;
+PTG_colonial_company_2;Nouvelle France;;;;;;;;;;;;;
 PTG_colonial_company_4;Grão-Ducado da Patagônia;;;;;;;;;;;;;
 HAI_colonial_company;Saint Dominic;;;;;;;;;;;;;
 HAI_colonial_company_2;Saint-Domingue;;;;;;;;;;;;;
