New Monarchist India flag

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -163,7 +163,7 @@ DAI;Vietnam;;;;;;;;;;;;;
 DAI_absolute_monarchy;Dai Nam;;;;;;;;;;;;;
 DAI_prussian_constitutionalism;Dai Nam;;;;;;;;;;;;;
 DAI_hms_government;Dai Nam;;;;;;;;;;;;;
-DAI_democracy;Vietnam;;;;;;;;;;;;;
+DAI;Dai Nam;;;;;;;;;;;;;
 DAI_proletarian_dictatorship;Socialist Republic of Vietnam;;;;;;;;;;;;;
 DAI_communist;Viet Nam Cong san Ðang;;;;;;;;;;;;;
 ENG_communist;Communist Party of Great Britain;;;;;;;;;;;;;
