Kyrgyzia and Senior Juz renames

--- a/GFM/localisation/000_persia_map.csv
+++ b/GFM/localisation/000_persia_map.csv
@@ -219,7 +219,7 @@ PROV4133;Taleqan;;;;;;;;;;;;;
 PROV4134;Shaikh Dara;;;;;;;;;;;;;
 PROV4135;Andijan;;;;;;;;;;;;;
 PROV4136;Namangan;;;;;;;;;;;;;
-PROV4137;Merke;;;;;;;;;;;;;
+PROV4137;Mirki;;;;;;;;;;;;;
 PROV4138;Tamshybulak;;;;;;;;;;;;;
 PROV4139;Tsarkent;;;;;;;;;;;;;
 PROV4140;Alty-Kuduk;;;;;;;;;;;;;
