--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1160,10 +1160,10 @@ PROV4142;Noamlakee;;;;;;;;;;;;;
 PROV4143;Mólališ;;;;;;;;;;;;;
 PROV4144;Goyatöka;;;;;;;;;;;;;
 PROV4145;Washakie;;;;;;;;;;;;;
-PROV4146;Tacheng;;;;;;;;;;;;;
+PROV4146;Tarbagatai;;;;;;;;;;;;;
 PROV4147;Aleitai;;;;;;;;;;;;;
 PROV4148;Yaer;;;;;;;;;;;;;
-PROV4149;Akaral;;;;;;;;;;;;;
+PROV4149;Chindagatai;;;;;;;;;;;;;
 PROV4150;Turachak;;;;;;;;;;;;;
 PROV4151;Itahari;;;;;;;;;;;;;
 PROV4152;Dhangadhi;;;;;;;;;;;;;
