--- a/GFM/localisation/0000_GFM_Deer.csv
+++ b/GFM/localisation/0000_GFM_Deer.csv
@@ -67,6 +67,8 @@ kaz_conquer_kokand_title;Conquer the Khanate of Kokand;;;;;;;;;;;;;
 kaz_conquer_kokand_desc;Unite the Kazakh Steppe;;;;;;;;;;;;;
 kaz_conquer_kyrgyz_title;Put an end to Kyrgyz raids;;;;;;;;;;;;;
 kaz_conquer_kyrgyz_desc;Unite the Kazakh Steppe;;;;;;;;;;;;;
+junior_colonize_steppe_title;Consolidate the Syr Darya delta;;;;;;;;;;;;;
+junior_colonize_steppe_desc;With the Junior Jüz Kazakhs a free and independent people once again, we can consolidate the remaining disorganized territories in the Syr Darya delta and bring the Kazakhs living there into the fold.;;;;;;;;;;;;;
 unite_kazakhstan_title;Unite the Kazakh Steppe;;;;;;;;;;;;;
 unite_kazakhstan_desc;The Kazakh people are divide. No longer! We have established dominance over the disparate tribes of the Kazakh steppe and can claim the mantle of Shah-i Turan and Khan of All-Kazakhs. May our people remain united, may our people remain strong!;;;;;;;;;;;;;
 build_zhanqala_title;Build the Zhanaqala Fortress;;;;;;;;;;;;;
