--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -135,6 +135,8 @@ AGRESSION_WAR_CONQUEST_ANY_NAME_AUS_SLV;The Slovak Uprising;;;;;;;;;;;;;
 NORMAL_WAR_CONQUEST_ANY_NAME_AUS_SLV;The Slovak Uprising;;;;;;;;;;;;;
 AGRESSION_WAR_TAKE_CORE_NAME_SRR_TUR;The Herzegovina Uprising;;;;;;;;;;;;;
 NORMAL_WAR_TAKE_CORE_NAME_SRR_TUR;The Herzegovina Uprising;;;;;;;;;;;;;
+AGRESSION_WAR_TAKE_CORE_NAME_SER_BUL;The Serbo-Bulgarian War;;;;;;;;;;;;;
+NORMAL_WAR_TAKE_CORE_NAME_SER_BUL;The Serbo-Bulgarian War;;;;;;;;;;;;;
 AGRESSION_WAR_CONQUEST_ANY_NAME_TUR_GRR;The $ORDER$Greek Revolt;;;;;;;;;;;;;
 NORMAL_WAR_CONQUEST_ANY_NAME_TUR_GRR;The $ORDER$Greek Revolt;;;;;;;;;;;;;
 AGRESSION_WAR_CONQUEST_NAME_PRU_PZN;The Greater Poland Uprising;;;;;;;;;;;;;
