--- a/GFM More Cultures/localisation/00000culture submod.csv
+++ b/GFM More Cultures/localisation/00000culture submod.csv
@@ -1173,3 +1173,4 @@ guahibo;Guahibo;;;;;;;;;;;;
 pueblo;Pueblo;;;;;;;;;;;;
 mormon_culture;Mormon;;;;;;;;;;;;
 paikoka;Paikoka;;;;;;;;;;;;
+zapoteco;Zapoteco;;;;;;;;;;;;
