--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3344,7 +3344,7 @@ ATB_ADJ;Saxon;Saxon;Saxon;;;;;;;;;;;
 PLR;Poland-Lithuania-Ruthenia;;;;;;;;;;;;;
 PLR_ADJ;Polish-Lithuanian-Ruthenian;;;;;;;;;;;;;
 PLR_democracy;The Republic of Three Nations;;;;;;;;;;;;;
-PLR_fascist_dictatorship;ThePolish-Lithuanian-Ruthenian Empire;;;;;;;;;;;;;
+PLR_fascist_dictatorship;The Polish-Lithuanian-Ruthenian Empire;;;;;;;;;;;;;
 PLR_proletarian_dictatorship;Union of Poland-Lithuania-Ruthenia;;;;;;;;;;;;;
 PLR_absolute_monarchy;The Polish-Lithuanian-Ruthenian Commonwealth;;;;;;;;;;;;;
 PLR_prussian_constitutionalism;The Polish-Lithuanian-Ruthenian Commonwealth;;;;;;;;;;;;;
