--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1047,7 +1047,7 @@ PROV3979;Ipanya;;;;;;;;;;;;;
 PROV3980;Rumu;;;;;;;;;;;;;
 PROV3981;Kobur;;;;;;;;;;;;;
 PROV3982;Makeni;;;;;;;;;;;;;
-PROV3983;Selibabi;;;;;;;;;;;;;
+PROV3983;Attu;;;;;;;;;;;;;
 PROV3984;Iwalatan;;;;;;;;;;;;;
 PROV3985;Bakel;;;;;;;;;;;;;
 PROV3986;Marela;;;;;;;;;;;;;
