lei de terras and miscellaneous changes

--- a/GFM/localisation/00_GFM_Terrains.csv
+++ b/GFM/localisation/00_GFM_Terrains.csv
@@ -76,7 +76,7 @@ bahrain;Island;;;;;;;;;;;;;
 bandar_abbas;Semidesert;;;;;;;;;;;;;
 basra;Marsh;;;;;;;;;;;;;
 batumi;Grassland Hills;;;;;;;;;;;;;
-beirut;Semidesert;;;;;;;;;;;;;
+beirut;Grassland;;;;;;;;;;;;;
 belgorod;Grassland;;;;;;;;;;;;;
 bukhara;Semidesert;;;;;;;;;;;;;
 bushire;Semidesert;;;;;;;;;;;;;
@@ -1035,7 +1035,7 @@ narva;Forest;;;;;;;;;;;;;
 nordhorn;Farmlands;;;;;;;;;;;;;
 novaya_ladoga;Forest;;;;;;;;;;;;;
 padanga;Jungle Mountains;;;;;;;;;;;;;
-pinsk;Grassland;;;;;;;;;;;;;
+pinsk;Marsh;;;;;;;;;;;;;
 probolinggo;Jungle Mountains;;;;;;;;;;;;;
 pyatigorsk;Montane Grassland;;;;;;;;;;;;;
 sambapul;Forest;;;;;;;;;;;;;
