--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3127,6 +3127,10 @@ TRZ_democracy;Mauritania;Mauritanie;Mauretanien;;;;;;;;;;;
 TRZ_democracy_ADJ;Mauritanian;Mauritanien;Mauretanische;;;;;;;;;;;
 AWS;Aussa;;;;;;;;;;;;;
 AWS_ADJ;Afar;Afar;Afar;;;;;;;;;;;
+AWS_democracy;Djibuti;;;;;;;;;;;;;
+AWS_radical_republic;Djibuti;;;;;;;;;;;;;
+AWS_proletarian_dictatorship;Djibuti;;;;;;;;;;;;;
+AWS_fascist_dictatorship;Djibuti;;;;;;;;;;;;;
 AWS_conservative;Sultan's Faction;Faction Sultan;Sultan Fraktion;;;;;;;;;;;
 AWS_liberal;Reformers Faction;Faction réformateurs;Reformatoren Fraktion;;;;;;;;;;;
 AWS_reactionary;Military Faction;Faction militaire;Militärische Fraktion;;;;;;;;;;;
