--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -480,7 +480,7 @@ ORA_colonial_company_2;Orange;;;;;;;;;;;;;
 ORA_colonial_company_3;Orange;;;;;;;;;;;;;
 MLD_colonial_company;Maldives Protectorate;;;;;;;;;;;;;
 MLD_colonial_company_2;Îles Maldives;;;;;;;;;;;;;
-MLD_colonial_company_3;Maldivische Inseln;;;;;;;;;;;;;
+MLD_colonial_company_3;Malediven;;;;;;;;;;;;;
 MLD_colonial_company_4;Morujibu-Shoto;;;;;;;;;;;;;
 ALB_absolute_empire;Pashalik of Scutari;;;;;;;;;;;;;
 ALB_semi_constitutional_empire;Pashalik of Scutari;;;;;;;;;;;;;
