fixes + revert Chaco BRZ name change

--- a/GFM/localisation/0000Sitka.csv
+++ b/GFM/localisation/0000Sitka.csv
@@ -195,12 +195,12 @@ Claim_QAS_title;Claim greater Qashqai;;;;;;;;;;;;;
 Claim_QAS_desc;§RGain 4 infamy§! We need to seize lands to grow stronger. Let us do so.;;;;;;;;;;;;;
 treaty_of_la_pointe_title;The first Treaty of La Pointe;;;;;;;;;;;;;
 treaty_of_la_pointe_two_title;The second Treaty of La Pointe;;;;;;;;;;;;;
-treaty_of_la_pointe_desc;The great lakes Indians have informed us that they would be willing to sell us some of their land.;;;;;;;;;;;;;
-treaty_of_la_pointe_two_desc;The great lakes Indians have informed us that they would be willing to sell us some of their land.;;;;;;;;;;;;;
-treaty_of_traverse_des_sioux_desc;The great lakes Indians have informed us that they would be willing to sell us some of their land.;;;;;;;;;;;;;
+treaty_of_la_pointe_desc;The Great Lakes Indians have informed us that they would be willing to sell us some of their land.;;;;;;;;;;;;;
+treaty_of_la_pointe_two_desc;The Great Lakes Indians have informed us that they would be willing to sell us some of their land.;;;;;;;;;;;;;
+treaty_of_traverse_des_sioux_desc;The Great Lakes Indians have informed us that they would be willing to sell us some of their land.;;;;;;;;;;;;;
 treaty_of_traverse_des_sioux_title;The Treaty of Traverse des Sioux;;;;;;;;;;;;;
 treaty_of_washington_title;The Treaty of Washington;;;;;;;;;;;;;
-treaty_of_washington_desc;The great lakes Indians have informed us that they would be willing to sell us some of their land.;;;;;;;;;;;;;
+treaty_of_washington_desc;The Great Lakes Indians have informed us that they would be willing to sell us some of their land.;;;;;;;;;;;;;
 treaty_of_fort_laramie_title;The Treaty of Fort Laramie;;;;;;;;;;;;;
 treaty_of_fort_laramie_desc;We can convince the Great Plains Indians to cede a lot of land to us in exchange for us guaranteeing the rest of their territory will stay undisturbed by white men and a large payment for food sustenance due to the decreased hunting grounds.;;;;;;;;;;;;;
 treaty_of_fort_wise_title;The Treaty of Fort Wise;;;;;;;;;;;;;
