--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -389,7 +389,7 @@ KOR_semi_constitutional_empire;The Korean Empire;;;;;;;;;;;;;
 KOR_constitutional_empire;The Korean Empire;;;;;;;;;;;;;
 KOR;Korea;;;;;;;;;;;;;
 KOR_absolute_monarchy;Joseon;;;;;;;;;;;;;
-KOR_proletarian_dictatorship;DPRK;;;;;;;;;;;;;
+KOR_proletarian_dictatorship;People's Republic of Korea;;;;;;;;;;;;;
 KOR_reactionary;Bandong;;;;;;;;;;;;;
 KOR_liberal;Taewon'gun;;;;;;;;;;;;;
 KOR_liberal_2;Songgyungwan;;;;;;;;;;;;;
