--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -146,6 +146,7 @@ LUB;Lubeck;;;;;;;;;
 PTR;Principality of Trinidad;;;;;;;;;
 PTR_ADJ;Trinidadian;;;;;;;;;
 PZN_colonial_company;Grand Duchy of Posen;;;;;;;;;
+MON_colonial_company_4;Governorato del Montenegro;;;;;;;;;
 patagonian;Patagonian Native;;;;;;;;;
 PTG_prussian_constitutionalism;Mapuche;;;;;;;;;
 PTG_hms_government;Kingdom of Araucania and Patagonia;;;;;;;;;
