--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -452,3 +452,4 @@ chilean;Chilean;;;;;;;;;;;;;
 tawantinsuyu_reborn_title;Tawantinsuyu Reborn;;;;;;;;;;;;;
 tawantinsuyu_reborn_desc;Text will be added soon, sorry!;;;;;;;;;;;;;
 tawantinsuyu_empire;Tawantinsuyu Reborn;;;;;;;;;;;;;
+colonial_formosa_mockup;\n\nWe continue our colonial advancements on the Island of Formosa.;;;;;;;;;;;;;
