actual hell (reworked belarus POP, new PLC border)

--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -165,7 +165,7 @@ PROV3535;Rize;;;;;;;;;;;;;
 PROV3534;Yozgat;;;;;;;;;;;;;
 PROV3533;Kalan;;;;;;;;;;;;;
 PROV3532;Sinjar;;;;;;;;;;;;;
-PROV3531;Divrigi;;;;;;;;;;;;;
+PROV3531;Polatsk;;;;;;;;;;;;;
 PROV3530;Silvan;;;;;;;;;;;;;
 PROV3529;Sar-e Pol;;;;;;;;;;;;;
 PROV3528;Ghur;;;;;;;;;;;;;
