--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -145,7 +145,7 @@ WUR;Wurttemberg;;;;;;;;;
 LUB;Lubeck;;;;;;;;;
 PTR;Principality of Trinidad;;;;;;;;;
 PTR_ADJ;Trinidadian;;;;;;;;;
-PZN_colonial_company;Grand Duchy of Posen;;;;;;;;;
+PZN_colonial_company;Groﬂherzogtum Posen;;;;;;;;;
 MON_colonial_company_4;Governorato del Montenegro;;;;;;;;;
 patagonian;Patagonian Native;;;;;;;;;
 PTG_prussian_constitutionalism;Mapuche;;;;;;;;;
