--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9722,7 +9722,7 @@ PROV1412;Aden;Aden;Aden;;Adén;;;;;;;;;
 PROV1431;Bone;Bone;Bone;;Bone;;;;;;;;;
 PROV1455;Manila;Manilles;Manila;;Manila;;;;;;;;;
 PROV1456;Vigan;Vigan;Vigan;;Vigan;;;;;;;;;
-PROV1457;Legazpi;Legazpi;Legazpi;;Legazpi;;;;;;;;;
+PROV1457;Naga;Legazpi;Legazpi;;Legazpi;;;;;;;;;
 PROV1458;Mindoro;Mindoro;Mindoro;;Mindoro;;;;;;;;;
 PROV1459;Palawan;Palawan;Palawan;;Palawan;;;;;;;;;
 PROV1460;Iloilo;Iloilo;Iloilo;;Iloilo;;;;;;;;;
@@ -10150,7 +10150,7 @@ PROV1950;Yola;Yola;Yola;;Yola;;;;;;;;;
 PROV1951;Kuka;Kuka;Kuka;;Kuka;;;;;;;;;
 PROV1952;Kalwa;Nguru;Nguru;;Nguru;;;;;;;;;
 PROV1953;Ostfriesische Inseln;Dikoa;Dikoa;;Dikoa;;;;;;;;;
-PROV1954;São Tomé;São Tomé;Sao Tome;;Sao Tome;;;;;;;;;
+PROV1954;São Tomé e Príncipe;São Tomé;Sao Tome;;Sao Tome;;;;;;;;;
 PROV1955;Fernando Pó;Fernando Po;Fernando Po;;Fernando Po;;;;;;;;;
 PROV1956;Deido;Douala;Douala;;Douala;;;;;;;;;
 PROV1957;Bamenda;Buea;Buea;;Buea;;;;;;;;;
