--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -1914,6 +1914,9 @@ RHI_communist;Communist Arbeiterpartei;Arbeiterpartei communiste;Kommunistische 
 RHI_fascist;NSDP;NSDP;NSDP;;;;;;;;;;;
 BMW;baMangwato;;;;;;;;;;;;;
 BMW_ADJ;baMangwato;;;;;;;;;;;;;
+BMW_absolute_empire;Logwato;;;;;;;;;;;;;
+BMW_semi_constitutional_empire;Logwato;;;;;;;;;;;;;
+BMW_constitutional_empire;Logwato;;;;;;;;;;;;;
 RPL_colonial_company;The Hudson's Bay Company;;;;;;;;;;;;;
 RPL_dominion;The Hudson's Bay Company;;;;;;;;;;;;;
 RPL_colonial_company_ADJ;British;;;;;;;;;;;;;
