--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -135,8 +135,6 @@ AGRESSION_WAR_CONQUEST_ANY_NAME_AUS_SLV;The Slovak Uprising;;;;;;;;;;;;;
 NORMAL_WAR_CONQUEST_ANY_NAME_AUS_SLV;The Slovak Uprising;;;;;;;;;;;;;
 AGRESSION_WAR_TAKE_CORE_NAME_SRR_TUR;The Herzegovina Uprising;;;;;;;;;;;;;
 NORMAL_WAR_TAKE_CORE_NAME_SRR_TUR;The Herzegovina Uprising;;;;;;;;;;;;;
-AGRESSION_WAR_TAKE_CORE_NAME_SER_BUL;The Serbo-Bulgarian War;;;;;;;;;;;;;
-NORMAL_WAR_TAKE_CORE_NAME_SER_BUL;The Serbo-Bulgarian War;;;;;;;;;;;;;
 AGRESSION_WAR_CONQUEST_ANY_NAME_TUR_GRR;The $ORDER$Greek Revolt;;;;;;;;;;;;;
 NORMAL_WAR_CONQUEST_ANY_NAME_TUR_GRR;The $ORDER$Greek Revolt;;;;;;;;;;;;;
 AGRESSION_WAR_CONQUEST_NAME_PRU_PZN;The Greater Poland Uprising;;;;;;;;;;;;;
@@ -1463,8 +1461,8 @@ WASHINGTONTREATYDONE;As a result of arbitration by the German Kaiser, we have be
 GERMANARBITRATION;The United Kingdom seeks our impartial opinion on who shall receive the San Juans Islands, an archipelago off the Pacific Northwestern coast claimed by both the British and Americans. The conflict over this dispute has inflamed by the shooting of an Irishman's pig by an American settler, who sought American military protection after the incident. Now the two countries are at it again over the not-yet-finalized final border between the US and Canada. But now we have the power to decide which of these countries will have these islands.;;;;;;;;;;;;;
 MURICAFRICKYEAH;As a result of arbitration by the German Kaiser, the United States have been granted full control over the San Juans Islands, following a period of joint military occupation by Anglo-American forces. With our undisputed ownership of the islands, the days of American expansion in the Pacific Northwest have officially come to an end.;;;;;;;;;;;;;
 GODSAVEDAQUEEN;As a result of arbitration by the German Kaiser, the United Kingdom will retain control of the San Juans Islands. The decision was made following a period of joint military occupation by Anglo-American forces. With the British having undisputed ownership of the islands, the days of American expansion in the Pacific Northwest have officially come to an end.;;;;;;;;;;;;;
-core_eesti_danes_title;Claim Estonia;;;;;;;;;;;;
-core_eesti_danes_desc;§RGain 3 infamy§! Now that we have achieved dominance over Scandinavia, the time has finally come to re-establish our claim to the Duchy of Estonia. King Valdemar II defeated the Estonians at the  Battle of Lindanise in 1219, planting the Danish flag firmly on Baltic soil. Our final holdout, the island of Øsel, was lost to Sweden over 400 years later in the 1645 Treaty of Brömsebro.;;;;;;;;;;;;;;
+core_eesti_danes_title;Integrate Estonia;;;;;;;;;;;;
+core_eesti_danes_desc;Now that we have achieved dominance over Estonia, the time has finally come to reintegrate the duchy into our nation. While it has been quite some time since the Dannebrog was last planted in Estonian soil, the Baltics have been under foreign rule for centuries and the Estonian people wouldn't offer to much resistance to our rule if we were to give them equal rights to the Danish population.;;;;;;;;;;;;;;
 statto_da_mar_title;Claim the Statto da Mar;;;;;;;;;;;;
 statto_da_mar_desc;§RGain 3 infamy§! With our position in Dalmatia now secured, we can finally turn our eyes East once more. Venice has been deprived of its overseas dominions for too long. The time has come for us to reclaim our rightful lands! For Venice!;;;;;;;;;;;;;;
 PROV201;Fort Peachtree;Fort Peachtree;Fort Peachtree;;Fort Peachtree;;;;;;;;;
