--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3860,6 +3860,8 @@ GWR;Gwiriko;;;;;;;;;;;;
 GWR_ADJ;Gwiriko;;;;;;;;;;;;;
 ISQ;Isaaq;;;;;;;;;;;;
 ISQ_ADJ;Isaaq;;;;;;;;;;;;;
+HBR;Habr Yunis;;;;;;;;;;;;
+HBR_ADJ;Habr;;;;;;;;;;;;;
 BZD;Kabadugu;;;;;;;;;;;;
 BZD_ADJ;Kabadugu;;;;;;;;;;;;;
 BTL;Badibu;;;;;;;;;;;;
@@ -4088,12 +4090,8 @@ BOE_proletarian_dictatorship;United Proletariat of France and Spain;;;;;;;;;;;;;
 BOE_proletarian_dictatorship_ADJ;Franco-Spanish;;;;;;;;;;;;;
 BOE_fascist_dictatorship;Bourbon Restoration League;;;;;;;;;;;;;
 BOE_fascist_dictatorship_ADJ;Bourbon;;;;;;;;;;;;;
-MGH_absolute_monarchy;Rizaiqat;;;;;;;;;;;;;
-MGH_prussian_constitutionalism;Rizaiqat;;;;;;;;;;;;;
-MGH_hms_government;Rizaiqat;;;;;;;;;;;;;
-MGH_absolute_monarchy_ADJ;Rizaiqat;;;;;;;;;;;;;
-MGH_prussian_constitutionalism_ADJ;Rizaiqat;;;;;;;;;;;;;
-MGH_hms_government_ADJ;Rizaiqat;;;;;;;;;;;;;
+RZQ;Rizaiqat;;;;;;;;;;;;;
+RZQ_ADJ;Rizaiqati;;;;;;;;;;;;;
 SOM_theocracy;Hiraab;;;;;;;;;;;;;
 SOM_theocracy_ADJ;Hiraabi;;;;;;;;;;;;;
 WAD_absolute_empire;Wara Empire;;;;;;;;;;;;;
