--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1050,7 +1050,7 @@ PROV3983;Attu;;;;;;;;;;;;;
 PROV3984;Iwalatan;;;;;;;;;;;;;
 PROV3985;Bakel;;;;;;;;;;;;;
 PROV3986;Tottori;;;;;;;;;;;;;
-PROV4002;Attu;;;;;;;;;;;;;
+PROV4002;Tribugá;;;;;;;;;;;;;
 PROV4003;Qurungua;;;;;;;;;;;;;
 PROV4004;Concepción;;;;;;;;;;;;;
 PROV4005;Bororbaigá;;;;;;;;;;;;;
