--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -592,7 +592,7 @@ EVTDESC78967874;\n\nWithout a land connection to Moundou, the owners of Doba hav
 EVTDESC54678946;\n\nWithout a land connection to Boosaaso, its owners can no longer defend it. We will therefore take it over.;;;;;;;;;;;;;
 EVTDESC54678945;\n\nWithout a land connection to Boosaaso, the owners of Caluula have taken it over.;;;;;;;;;;;;;
 EVTDESC546789461;\n\nWithout a land connection to Las Khorey, its owners can no longer defend it. We will therefore take it over.;;;;;;;;;;;;;
-EVTDESC546789451;\n\nWithout a land connection to Las Khorey, the owners of Ceelafweyn have taken it over.;;;;;;;;;;;;;
+EVTDESC546789451;\n\nWithout a land connection to Las Khorey, the owners of Burco have taken it over.;;;;;;;;;;;;;
 EVTDESC54678948;\n\nWithout a land connection to Kufe, its owners can no longer defend it. We will therefore take it over.;;;;;;;;;;;;;
 EVTDESC54678949;\n\nWithout a land connection to Kufe, the owners of Zinder have taken it over.;;;;;;;;;;;;;
 EVTDESC54678952;\n\nWithout a land connection to Nkomazi, its owners can no longer defend it. We will therefore take it over.;;;;;;;;;;;;;
@@ -1704,7 +1704,7 @@ EVTDESC184825485;\n\nAfter our ultimatum, the $FROMCOUNTRY_ADJ$ have decided to 
 EVTDESC18482549;\n\nAfter numerous battles, we have finally won the war in Algeria and we can now sign a treaty to define our influence.;;;;;;;;;;;;;
 EVTDESC184825491;\n\nAfter numerous battles, we've lost the war againt the French, and we have to give in.;;;;;;;;;;;;;
 EVTDESC184825492;\n\nAfter numerous battles, the Ottomans have lost the war againt the French, and we have to give in.;;;;;;;;;;;;;
-EVTDESC184825502;\n\nHarar has stopped supporting Habr Yunis and ended the siege to Berbera.;;;;;;;;;;;;;
+EVTDESC184825502;\n\nHabr Yunis has stopped supporting rebels in Burco and ended the siege.;;;;;;;;;;;;;
 EVTDESC184825515;\n\n$FROMCOUNTRY$ haven't united with us, and want to conserve their independence.;;;;;;;;;;;;;
 EVTDESC184825518;\n\nThe Ottomans have asked us to cede Tripoli back, as as a vassal they cannot free themselves and give up their territory.;;;;;;;;;;;;;
 EVTDESC184825519;\n\n$FROMCOUNTRY$ have asked us to cede Tunis back, as as a vassal they cannot free themselves and give up their territory.;;;;;;;;;;;;;
