--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2932,3 +2932,5 @@ TZEKOHRDISPUTEONE;The lands now in Northern Liberia, centered in the city of Tze
 TZEKOHRDISPUTETWO;Tzekohr, part of our northern possessions, has been claimed by $FROMCOUNTRY$ on the grounds that it is ridden with banditry, and that the Toma Konianke people they claim to protect are under attacks in our lands. This is clearly a move to annex more land from our state, which they see as defenceless.;;;;;;;;;;;;;
 TZEKOHRDISPUTETHREE;Liberia has refused to negotiate our border with them in Guinea, escalating the crisis even more. We must consider further escalation, as backing down is not an option to such insults.;;;;;;;;;;;;;
 TZEKOHRDISPUTEFOUR;Liberia has finally accepted to cede Tzekohr to our Guinea colonial possession, making our border more stable and secure.;;;;;;;;;;;;;
+lpl_1826_constitution_title;Restore the 1826 Constitution;;;;;;;;;;;;;
+lpl_1826_constitution_desc;In 1826 we signed a constitution to centralize our country once and for all, but the Federalists launched a rebellion and elections couldn't be called. Now that our condition is more favorable, we can finally restore it as our binding constitution.;;;;;;;;;;;;;
