--- a/GFM/localisation/00_HPM_decisions.csv
+++ b/GFM/localisation/00_HPM_decisions.csv
@@ -488,6 +488,8 @@ macao_treaty_port_title;The Macao Treaty Port;;;;;;;;;;;;;
 macao_treaty_port_desc;Macao lies on the western side of the Pearl River Delta across from Hong Kong. If we are to access the riches of Canton and the south of China, controlling Macao would be a good start.;;;;;;;;;;;;;
 oki_treaty_port_title;The Oki Islands Treaty Port;;;;;;;;;;;;;
 oki_treaty_port_desc;The Oki Islands lie off the western coast of Japan. If we are to have a coaling station and a warm port for the Sea of Japan and the wider Northern Pacific, the Oki Islands would certainly make for a great candidate.;;;;;;;;;;;;;
+brunei_treaty_port_title;The Brunei Treaty Port;;;;;;;;;;;;;
+brunei_treaty_port_desc;The Sultanate of Brunei's center is at the mouth of the Brunei River, where its capital, Kampong Ayer, is located. Known as the "Venice of Borneo," the town is made up of houses perched on piles that constructed on mudflats. Despite its unattractive appearance, encircled by mud at low tide and water at high tide, Kampong Ayer is nonetheless renowned for its bustling markets and its packed buildings. Brunei Bay, which it is built beside, also serves as an excellent harbor, and is a center of commerce of southeastern Asia.;;;;;;;;;;;;;
 qeshm_treaty_port_title;The Qeshm Treaty Port;;;;;;;;;;;;;
 qeshm_treaty_port_desc;Located in a central point in the Hormuz Strait, the island and city of Qeshm serves as a vital route and trade link to India, East Africa and Persia. Its position in the Persian Gulf is central for the control of the Hormuz Strait.;;;;;;;;;;;;;
 ifni_treaty_port_title;The Ifni Treaty Port;;;;;;;;;;;;;
