--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3263,9 +3263,9 @@ FRC_ADJ;Frankish;;;;;;;;;;;;;
 FRC_absolute_monarchy;The Frankish Empire;;;;;;;;;;;;;
 FRC_prussian_constitutionalism;The Frankish Empire;;;;;;;;;;;;;
 FRC_hms_government;The Frankish Empire;;;;;;;;;;;;;
-AUB;Cisleithania;;;;;;;;;;;;;
+AUB;Austroslavia;;;;;;;;;;;;;
 AUB_ADJ;Austroslavic;;;;;;;;;;;;;
-AUB_democracy;Cisleithania;;;;;;;;;;;;;
+AUB_democracy;Austroslavia;;;;;;;;;;;;;
 AUB_proletarian_dictatorship;Austroslavia;;;;;;;;;;;;;
 AUB_fascist_dictatorship;Austria-Slavia;;;;;;;;;;;;;
 AUB_presidential_dictatorship;Austroslavia;;;;;;;;;;;;;
