Renames in Kazakhstan

--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9538,7 +9538,7 @@ PROV1176;Bayda;Bayda;Bayda;;Bayda;;;;;;;;;
 PROV1177;Socotra;Socotra;Socotra;;Socotra;;;;;;;;;
 PROV1180;Taizz;Taizz;Taizz;;Taizz;;;;;;;;;
 PROV1182;Guryev;Guryev;Guryev;;Gureiev;;;;;;;;;
-PROV1183;Aqtobe;Aqtobe;Aqtobe;;Aqtobe;;;;;;;;;
+PROV1183;Aktobe;Aqtobe;Aqtobe;;Aqtobe;;;;;;;;;
 PROV1184;Semipalatinsk;Kokshetau;Kokshetau;;Kokshetau;;;;;;;;;
 PROV1187;Ayagoz;Semipalatinsk;Semipalatinsk;;Semipalátinsk;;;;;;;;;
 PROV1209;Kabul;Kabul;Kabul;;Kabul;;;;;;;;;
@@ -10702,7 +10702,7 @@ PROV2602;Roebourne;Roebourne;Roebourne;;Roebourne;;;;;;;;;
 PROV2604;Normanton;Normanton;Normanton;;Normanton;;;;;;;;;
 PROV2608;Khatgal;Khatgal;Khatgal;;Khatgal;;;;;;;;;
 PROV2610;Uralsk;Uralsk;Uralsk;;Uralsk;;;;;;;;;
-PROV2611;Nikolaevsk;Turgay;Turgay;;Turgay;;;;;;;;;
+PROV2611;Troitsk;Turgay;Turgay;;Turgay;;;;;;;;;
 PROV2612;Aktash;Aktash;Aktash;;Aktash;;;;;;;;;
 PROV2615;Krasnoselkup;Krasnoselkup;Krasnoselkup;;Krasnoselkup;;;;;;;;;
 PROV2616;Tilichiki;Tilichiki;Tilichiki;;Tilichiki;;;;;;;;;
