--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -1213,21 +1213,16 @@ JAM_socialist;People's Political Party;People's Political Party;People's Politic
 JAM_communist;Worker's Party;Worker's Party;Worker's Party;;;;;;;;;;;
 JAM_radical;Radical Party;Radical Party;Radical Party;;;;;;;;;;;
 JAM_fascist;Fascist Party;Fascist Party;Fascist Party;;;;;;;;;;;
-JAP_democracy;Japan;;;;;;;;;;;;;
+JAP;Japan;;;;;;;;;;;;;
+JAP_ADJ;Japanese;;;;;;;;;;;;;
 JAP_absolute_empire;The Empire of Japan;;;;;;;;;;;;;
-JAP_absolute_empire_ADJ;Imperial Japanese;;;;;;;;;;;;;
 JAP_semi_constitutional_empire;The Empire of Japan;;;;;;;;;;;;;
-JAP_semi_constitutional_empire_ADJ;Imperial Japanese;;;;;;;;;;;;;
 JAP_constitutional_empire;The Empire of Japan;;;;;;;;;;;;;
-JAP_constitutional_empire_ADJ;Imperial Japanese;;;;;;;;;;;;;
 JAP_proletarian_dictatorship;The People's Republic of Japan;;;;;;;;;;;;;
-JAP_proletarian_dictatorship_ADJ;The People's Republic of Japan;;;;;;;;;;;;;
-JAP_prussian_constitutionalism;The Tokugawa Shogunate;;;;;;;;;;;;;
-JAP_prussian_constitutionalism_ADJ;Tokugawa;;;;;;;;;;;;;
+JAP_prussian_constitutionalism;The Shogunate of Japan;;;;;;;;;;;;;
 JAP_absolute_monarchy;The Tokugawa Shogunate;;;;;;;;;;;;;
 JAP_absolute_monarchy_ADJ;Tokugawa;;;;;;;;;;;;;
-JAP_hms_government;The Tokugawa Shogunate;;;;;;;;;;;;;
-JAP_hms_government_ADJ;Tokugawa;;;;;;;;;;;;;
+JAP_hms_government;The Shogunate of Japan;;;;;;;;;;;;;
 JAP_reactionary;Handoutou;Faction Shogunate;Shogunate Faction;;;;;;;;;;;
 JAP_conservative;Rikken Teiseitou;Faction de la cour;Court Faction;;;;;;;;;;;
 JAP_conservative_2;Rikken Kaishintou;Faction impérialiste;Imperialist Faction;;;;;;;;;;;
