--- a/GFM/localisation/00_HPM_events.csv
+++ b/GFM/localisation/00_HPM_events.csv
@@ -2558,7 +2558,7 @@ EVTNAME97615;Sonno Joi;;;;;;;;;;;;;
 EVTDESC97615;'Revere the emperor and expel the barbarians!' \n \n This is the slogan chanted by neo-confucian activists, reacting to the Tokugawa Shogunate's opening of Japan to foreigners. There have been growing reports of violence all over the country, primarily against foreign visitors and statesmen, but also against the Shogunate itself. Each incident chips away at Tokugawa control over the daimyo and erodes relations with the western powers.;;;;;;;;;;;;;
 EVT97615OPTA;Japan must not descend into anarchy.;;;;;;;;;;;;;
 EVTNAME97616;$PROVINCENAME$ Incident;;;;;;;;;;;;;
-EVTDESC97616;There has been an incident in $PROVINCENAME$ where samurai, acting under the political slogan of 'Sonno Joi', have committed violence against foreigners conducting business in $STATENAME$. The incident has affected the Tokugawa Shogunate's relations with foreign powers, as well as incited locals into riot.;;;;;;;;;;;;;
+EVTDESC97616;There has been an incident in $PROVINCENAME$ where samurai, acting under the political slogan of 'Sonno Joi', have committed violence against foreigners conducting business in $STATENAME$. The incident has affected the $COUNTRY$'s relations with foreign powers, as well as incited locals into riot.;;;;;;;;;;;;;
 EVT97616OPTA;This disruption is growing worse!;;;;;;;;;;;;;
 EVTNAME97617;Order to Expel the Barbarians;;;;;;;;;;;;;
 EVTDESC97617;In an unprecedented move, the Imperial Court has issued an edict to expel the foreign barbarians present in Japan. This runs in contravention to the traditional role of the Emperor as a figurehead, is a challenge to the Shogunate's power, and may serve to further incite rebellion.;;;;;;;;;;;;;
