Austria joining Germany state creation choice

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -721,7 +721,7 @@ BAH_socialist;Partido Socialist;Partido socialiste;Partido Socialist;;;;;;;;;;;
 BAH_communist;Partido Communist;Partido communiste;Partido Communist;;;;;;;;;;;
 BAH_fascist;Partido Fascist;Partido fasciste;Partido Fascist;;;;;;;;;;;
 BAN;Banat;;;;;;;;;;;;;
-BAN_democracy;Banat Republic;;;;;;;;;;;;;
+BAN_democracy;Banat;;;;;;;;;;;;;
 BAN_ADJ;Banati;;;;;;;;;;;;;
 BAN_conservative;The Conservatives;Faction royale;Königsfraktion;;;;;;;;;;;
 BAN_liberal;The Liberals;Faction libérale;Die liberale Fraktion;;;;;;;;;;;
