--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3350,7 +3350,7 @@ PLR_fascist_dictatorship;The Polish-Lithuanian-Ruthenian Empire;;;;;;;;;;;;;
 PLR_proletarian_dictatorship;Union of Poland-Lithuania-Ruthenia;;;;;;;;;;;;;
 PLR_absolute_monarchy;The Polish-Lithuanian-Ruthenian Commonwealth;;;;;;;;;;;;;
 PLR_prussian_constitutionalism;The Polish-Lithuanian-Ruthenian Commonwealth;;;;;;;;;;;;;
-PLR_hms_goverment;The Polish-Lithuanian-Ruthenian Commonwealth;;;;;;;;;;;;;
+PLR_hms_government;The Polish-Lithuanian-Ruthenian Commonwealth;;;;;;;;;;;;;
 JER_ADJ;Jerusalemite;Jérusalemite;Jerusalem-;Jeruzalemite;Jerusalemite;Gerosolimitana;jeruzsálemi;jeruzalémské;jeruzsálemi;Jeruzalemiet;Jerusalemite;Èåğóñàëèìåö;Jerusalemite;
 LTN;The Latin Empire;L'Empire Latin;Das Lateinische Reich;Imperium £aciñskie;El Imperio Latino;L'Impero Latino;A Latin Birodalom;Latinská ríše;A Latin Birodalom;Het Latijnse Rijk;O Império Latino;Ëàòèíñêàÿ Èìïåğèÿ;Latinalaisen Imperiumin;
 LTN_ADJ;Latin;Latin;Lateinisch;£acina;Latín;Latina;Latin;Latinskı;Latin;Latijns;Latim;Ëàòèíñê.;Latina;
