--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -319,6 +319,7 @@ TSW_colonial_company_3;Batschuanaland;;;;;;;;;;;;;
 ZBW_colonial_company;Southern Rhodesia;;;;;;;;;;;;;
 ZBW_colonial_company_2;Matabésie;;;;;;;;;;;;;
 ZBW_colonial_company_3;Sambesia;;;;;;;;;;;;;
+ZBW_colonial_company_4;Matabeles;;;;;;;;;;;;;
 SUA_colonial_company;Swaziland;;;;;;;;;;;;;
 SUA_colonial_company_2;Souazilande;;;;;;;;;;;;;
 SUA_colonial_company_3;Schwaziland;;;;;;;;;;;;;
